# tts-webui-proxmox-passthrough

./: .dockerignore.optimized  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  APPLY_OPTIMIZATION.md  CHANGELOG.md  CHECKLIST_SPRINT0.md  CLEANUP_SUMMARY.md  COMMIT_MESSAGE.txt  COMO_TESTAR_MODELO.md  DEPLOYMENT_SUCCESS.md  DISK_OPTIMIZATION_REPORT.md  Dockerfile  Dockerfile.optimized  E2TTS-CONFIG-SUMMARY.md  E2TTS-TEST-RESULTS.md  ERRO.md  ERROR.md  EXECUTIVE_SUMMARY.md  EXEC_SUMMARY_WEBUI.md  F5TTS-PRODUCTION-READY.md  F5TTS-PTBR-IMPROVEMENTS.md  F5_TTS_REMOVED.md  FIX_CHECKPOINTS_AND_TEST.md  FIX_CHECKPOINTS_SAMPLES.md  GRADIO_MIGRATION.md  GRADIO_V2_README.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_SUMMARY.md  INCIDENT_REPORT.md  INDEX.md  INVESTIGATION_COMPLETE.md  MIGRATION_SUMMARY.md  MORE.md  MORE_WEBUI.md  MORE_WEBUI_COMPLETE.md  Makefile  (+78 more)
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  test.yml
app/: __init__.py  advanced_features.py  celery_config.py  celery_tasks.py  config.py  cuda_check.py  dependencies.py  error_patterns.py  exceptions.py  feature_flags.py  finetune_api.py  logging_config.py  main.py  metrics.py  models.py  processor.py  quality_profile_manager.py  quality_profile_mapper.py  quality_profiles.py  redis_store.py  resilience.py  rvc_client.py  rvc_dependencies.py  rvc_model_manager.py  settings.py  training_api.py  validators.py  vram_manager.py  xtts_client.py
app/engines/: __init__.py  base.py  f5tts_engine.py  f5tts_ptbr_engine.py  factory.py  xtts_engine.py
app/middleware/: __init__.py  error_handler.py
app/services/: __init__.py  xtts_service.py
app/utils/: __init__.py  form_parsers.py
app/webui/: README.md  index.html  jest.config.js  package.json  playwright.config.js
benchmarks/: README.md  analyze_results.py  dataset_ptbr.json  run_benchmark.py
docker/: Dockerfile-gpu  requirements-rvc.txt
docs/: ADVANCED_FEATURES.md  API_PARAMETERS.md  ARCHITECTURE.md  AUDIO-IMPROVEMENTS.md  AUDIO-QUALITY-TESTS.md  CHANGELOG.md  CUFFT_BUG_SOLVED.md  DEPLOYMENT.md  DEPRECATED_DOCS.md  DOCUMENTATION_UPDATE_COMPLETE.md  ENDPOINT_AUDIT.md  EXPLAIN.md  F5TTS_QUALITY_FIX.md  FORM_ENUM_PATTERN.md  GPU-SETUP.md  INFRASTRUCTURE_SETUP.md  LOW_VRAM.md  MIGRATION.md  MIGRATION_v1_to_v2.md  PERFORMANCE.md  PROXMOX_FIX_RAPIDO.md  PROXMOX_GPU_SETUP.md  QUALITY_PROFILES.md  README.md  ROLLOUT_PLAN.md  SESSION_SUMMARY.md  SPRINT_6.2_MODULARIZATION.md  STATUS_GPU_PROXMOX.md  SYMLINK_FIX.md  TRAINING_API.md  TRAINING_SAMPLES.md  V2_RELEASE_NOTES.md  api-reference.md  getting-started.md
docs/postmortems/: 2024-12-04-engine-selection-bug.md  2024-12-04-parameter-name-mismatch.md  2024-12-05-api-parameter-inconsistency.md  2025-12-05-f5tts-pyarrow-incompatibility.md
notebooks/: f5tts_research.ipynb
runs/F5TTS_Base/: events.out.tfevents.1764732233.ytaudio.463803.0
runs/None/: events.out.tfevents.1764729095.ytaudio.440110.0
scripts/: check-disk.sh  create_default_speaker.py  create_voice_presets.py  deploy_with_rollout.sh  download_models.py  migrate_voice_profiles.py  proxmox-bind-nvidia-complete.sh  setup_rvc_test_model.py  validate-deps.sh  validate-gpu.sh  validate-optimization.sh  validate-sprint4.sh  wait-and-restart.sh
scripts/not_remove/: build_metadata_csv.py  download_youtube.py  health_check.py  validate_and_reprocess.py  validate_setup.py
sprints_rvc/: AUDIO-QUALITY-SUMMARY.txt  IMPLEMENTATION_RVC.md  QA-CHECKLIST.md
sprints_tts_ok/: ROLLOUT.md  SPRINT-01-INFRA.md  SPRINT-01-STATUS.md  SPRINT-02-DEPS.md  SPRINT-03-RVC-CLIENT.md  SPRINT-04-INTEGRATION.md  SPRINT-05-TESTS-UNIT.md  SPRINT-07-API-ENDPOINTS.md  SPRINT-08-E2E-TESTS.md  SPRINT-09-PERFORMANCE.md  SPRINT-10-DOCUMENTATION-QA.md  SPRINTS-06-10-SUMMARY.md  TTS_RESEARCH_PTBR.md
tests/: HOW-TO-USE-RESULTS.md  README-CLONE-TEST.md  conftest.py  test_advanced_features.py  test_api_rvc_endpoints.py  test_audio_quality.py  test_clone_voice_engine_selection.py  test_docker_health.py  test_download_timeout.py  test_e2e_rvc_pipeline.py  test_engine_fallback.py  test_f5tts_loading.py  test_gpu_detection.py  test_rvc_client.py  test_rvc_client_coverage.py  test_rvc_dependencies.py  test_rvc_edge_cases.py  test_rvc_model_manager.py  test_rvc_performance.py  test_training_api.py  test_voice_clone_quality.py  test_xtts_rvc_integration.py  test_xtts_service.py
tests/e2e/: README.md  conftest.py  test_real_models.py
tests/integration/: test_api_endpoints.py  test_multi_engine_integration.py  test_processor_xtts.py  test_xtts_e2e.py
tests/manual/: test_xtts_standalone.py  test_xtts_voice_cloning.py
tests/output_clone_analysis/: TEST-RESULTS-ANALYSIS.md  analysis_results_20251125_054238.json
tests/train/: conftest.py
tests/unit/: test_audio_generation.py  test_config.py  test_feature_flags.py  test_models.py  test_processor_multi_engine.py  test_quality_profiles.py  test_serialization.py  test_xtts_client_cloning.py  test_xtts_client_dubbing.py  test_xtts_client_init.py
train/: .env.example  .gitignore  .train_aliases.sh  ANALISE_DEFINITIVA.md  CHECKPOINT_FIX.md  CONCLUSAO_FINAL.md  CRITICAL_BUGS_FIXED.md  ENV_CONFIG.md  FINAL_GUIDE.md  NOTEBOOK_README.md  PROXIMOS_PASSOS.md  QUICKSTART.md  QUICK_GUIDE.md  README.md  README_INVESTIGACAO.md  RESUMO_EXECUTIVO.txt  SOLUCAO_DEFINITIVA.md  SOLUCAO_ENCONTRADA.md  STATUS.md  UPDATES.md  VALIDATION.md  VALIDATION_FINAL.md  VALIDATION_REPORT.md  __init__.py  config_novo_validado.yaml  env_config.py  input_text.txt  install_train_command.sh  notebook.ipynb  quickstart.py  requirements_train.txt  run.sh  run_supervised_training.py  run_training.py  safe_train.py  test.py  teste_ok.py  train  train_settings.py  train_with_early_stopping.py  (+1 more)
train/audio/: README.md  __init__.py  effects.py  io.py  normalization.py  segmentation.py  vad.py
train/cli/: __init__.py  infer.py
train/config/: VOCAB.md  base_config.yaml  dataset_config.yaml  example_usage.py  loader.py  schemas.py  smoke_test.yaml  train_config.yaml
train/data/: f5_dataset_pinyin  videos.csv  (+1 more)
(+152 files in other folders)
